# Snowrunner-Manual-Gearbox-Mod

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py
.github/workflows/: cmake-single-platform.yml
cmake/: detours_add_cmake.cmake  detours_cmakelists.txt  setupConan.cmake
misc/: build_detours.bat
src/: CMakeLists.txt
src/dll/: CMakeLists.txt  custom_functions.cxx  custom_functions.h  main.cxx
src/dll/config/: ini_config.cpp  ini_config.hpp
src/dll/game_data/: data_types.h  game_data.cxx  game_data.h  vehicle.cxx
src/dll/include/: kiero.h
src/dll/include/smgm/: smgm.h
src/dll/include/smgm/actions/: action.h
src/dll/include/smgm/dinput/: device.h
src/dll/include/smgm/game/data_types/: misc.h  string.h  vehicle.h
src/dll/include/smgm/game/data_types/combine/: drive_camera_action.h  scene.h  sound_object.h  substance_wheel.h  truck_action.h  truck_addon_model.h  truck_control.h  truck_post_simulation_listener.h  truck_wheel_model.h  xmesh.h
src/dll/include/smgm/input/: action_bindings.h  actions.h  dinput_reader.h  key.h  keybinding.h
src/dll/include/smgm/input/v2/: device.h  device_id.h  device_manager.h  input_binding.h  input_bindings_manager.h  input_id.h  input_object.h  input_reader.h  input_state.h
src/dll/include/smgm/input/v2/dinput/: device.h  input_object.h  input_state.h
src/dll/include/smgm/input/v2/xinput/: device.h  input_object.h  input_state.h
src/dll/include/smgm/json/: config.h  fields.h  json.h  structs.h
src/dll/include/smgm/parser/x3/: as.h
src/dll/include/smgm/ui/: imgui_fmt.h  ui.h
src/dll/include/smgm/ui/components/: imhotkey.h
src/dll/include/smgm/utils/: d3d11_tools.h  detours_helpers.h  dinput_hook.h  dinput_tools.h  enums.h  format_helpers.h  guid.h  hooks.h  input_reader.h  logging.h  memory.h  propagate_const.h  type_traits.h  utils.h
src/dll/src/: kiero.cxx  main.cxx  smgm.cxx
src/dll/src/dinput/: device.cxx
src/dll/src/game/data_types/: vehicle.cxx
src/dll/src/input/: action_bindings.cxx  actions.cxx  dinput_reader.cxx  key.cxx  keybinding.cxx
src/dll/src/input/v2/: device.cxx  device_manager.cxx  input_binding.cxx  input_bindings_manager.cxx  input_id.cxx  input_object.cxx  input_reader.cxx
src/dll/src/input/v2/dinput/: device.cxx  input_object.cxx  input_state.cxx
src/dll/src/input/v2/xinput/: device.cxx  input_state.cxx
src/dll/src/json/: config.cxx
src/dll/src/ui/: ui.cxx
src/dll/src/utils/: d3d11_tools.cxx  dinput_hook.cxx  dinput_tools.cxx  input_reader.cxx
src/dll/utils/: format_helpers.cxx  format_helpers.h  hooks.cxx  hooks.h  input_reader.cxx  input_reader.h  logging.cxx  logging.h  memory.h
src/injector/: CMakeLists.txt  main.cxx
